--- a/package.json
+++ b/package.json
@@ -9,13 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@rnmapbox/maps": "github:rnmapbox/maps#main",
+    "babel-runtime": "^6.26.0",
     "expo": "~48.0.15",
+    "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.21.0",
+    "formik": "^2.2.9",
+    "leaflet": "^1.9.3",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-leaflet": "^4.2.1",
+    "react-native": "0.71.7",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-maps": "^1.3.2",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-webview": "11.26.0",
+    "react-redux": "^8.0.5",
+    "tailwind-react-native-classnames": "^1.5.1",
+    "twrnc": "^3.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.8"
   },
   "private": true
 }
