--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-webview": "11.26.0",
     "react-redux": "^8.0.5",
     "tailwind-react-native-classnames": "^1.5.1",
-    "twrnc": "^3.6.0"
+    "twrnc": "^3.6.0",
+    "expo-location": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
