--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.0",
+    "@ant-design/react-native": "^5.0.4",
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
@@ -29,6 +32,7 @@
     "react-native-maps": "^1.3.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "11.26.0",
     "react-redux": "^8.0.5",
     "tailwind-react-native-classnames": "^1.5.1",
