--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@ant-design/icons": "^5.1.0",
     "@ant-design/react-native": "^5.0.4",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-firebase/app": "^18.0.0",
+    "@react-native-firebase/firestore": "^18.0.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
@@ -21,7 +23,7 @@
     "expo-font": "~11.1.1",
     "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
-    "firebase": "^9.21.0",
+    "firebase": "^9.22.2",
     "formik": "^2.2.9",
     "leaflet": "^1.9.3",
     "react": "18.2.0",
@@ -29,6 +31,7 @@
     "react-native": "0.71.8",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-gifted-chat": "^2.3.0",
     "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
